# UsMod-dlls

./: metadata.example.json  registry.json
.github/workflows/: build-trainers.yml
.template/: CMakeLists.txt  versions.json
.template/src/: TemplateTrainer.cpp
Balatro/: CMakeLists.txt  registry.json  versions.json
Balatro/src/: BalatroTrainer.cpp
Cyberpunk2077/: CMakeLists.txt  registry.json  versions.json
Cyberpunk2077/src/: Cyberpunk2077Trainer.cpp
GoatSimulator/: CMakeLists.txt  registry.json  versions.json
GoatSimulator/src/: GoatSimulatorTrainer.cpp
PowerwashSimulator/: CMakeLists.txt  registry.json  versions.json
PowerwashSimulator/src/: PowerwashTrainer.cpp
ScheduleOne/: CMakeLists.txt  registry.json  versions.json
ScheduleOne/src/: ScheduleOne.cpp
StardewValley/: CMakeLists.txt  registry.json  versions.json
StardewValley/src/: StardewTrainer.cpp
UnityAOBScanner/: CMakeLists.txt  registry.json  versions.json
UnityAOBScanner/src/: UnityAOBScanner.cpp
WeLoveKatamariREROLL/: CMakeLists.txt  registry.json  versions.json
WeLoveKatamariREROLL/src/: WLKRRTrainer.cpp
include/: ITrainerModule.h
tools/: generate_registry.py  registry_editor.html
